TableView items show on map. NSUserDefault

--- a/XMLGeoLocationDemo/XMLGeoLocationDemo/Base.lproj/Main_iPhone.storyboard
+++ b/XMLGeoLocationDemo/XMLGeoLocationDemo/Base.lproj/Main_iPhone.storyboard
@@ -35,7 +35,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="Vex-rW-GRa">
             <objects>
-                <tabBarController id="8YX-ce-x5E" sceneMemberID="viewController">
+                <tabBarController id="8YX-ce-x5E" customClass="XGTabBarController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="JQR-rB-NYL">
                         <rect key="frame" x="0.0" y="431" width="320" height="49"/>
@@ -72,7 +72,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCellID" rowHeight="82" id="HDY-5w-VzN" customClass="XGTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="LocationCellID" rowHeight="82" id="HDY-5w-VzN" customClass="XGTableViewCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="82"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HDY-5w-VzN" id="cTA-ld-3zo">
@@ -136,7 +136,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cell.png" width="466" height="85"/>
+        <image name="cell.png" width="233" height="42"/>
         <image name="contacts_rrc.png" width="256" height="256"/>
         <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
